@@ -1,4 +1,7 @@
 Next:
+  - XMS: Add dosbox.conf option to XMS driver to switch on flat real mode
+    when a) the XMS driver initializes and/or b) when the XMS driver is
+    called on to move/copy memory. (joncampbell123).
   - INT 21h: If a DOS program frees a memory block, and then resizes the
     freed memory block, reassign ownership of that block to the program
     as if allocated. This is apparently canonical MS-DOS behavior. Added
